--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
         "tailwindcss": "^2.0.1",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "@headlessui/vue": "^1.1.1",
+        "@heroicons/vue": "^1.0.1"
     }
 }
