--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "reinink/remember-query-strings": "^0.1.0",
         "spatie/laravel-sluggable": "^3.0",
         "tightenco/ziggy": "^1.0"
     },
