--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,14 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "http-interop/http-factory-guzzle": "^1.0",
         "inertiajs/inertia-laravel": "^0.3.5",
         "laravel/framework": "^8.12",
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
+        "laravel/scout": "^9.1",
         "laravel/tinker": "^2.5",
+        "meilisearch/meilisearch-php": "^0.18.2",
         "reinink/remember-query-strings": "^0.1.0",
         "spatie/laravel-sluggable": "^3.0",
         "tightenco/ziggy": "^1.0"
