--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=meilisearch
+# The Prefix is needed if multiple Wannabes instances
+# make use of the same MeiliSeach host
+SCOUT_PREFIX=wannabes_
+MEILISEARCH_HOST=http://127.0.0.1:7700
+MEILISEARCH_KEY=masterKey
